plugins {
    id 'java'
    id 'application'
    id 'jacoco'
    id 'gg.jte.gradle' version '3.1.15'
}

group = 'ru.mentee.power'
version = '1.0-SNAPSHOT'

ext {
    junitVersion = '5.10.0'
    assertjVersion = '3.25.3'
    servletVersion = '6.1.0'
    tomcatVersion = '11.0.1'
    jteVersion = '3.1.15'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform("org.junit:junit-bom:${junitVersion}")
    testImplementation "org.junit.jupiter:junit-jupiter"
    testImplementation "org.assertj:assertj-core:${assertjVersion}"
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.mockito:mockito-core:5.21.0' // Замените на последнюю версию
    testImplementation 'org.mockito:mockito-junit-jupiter:5.21.0'
    implementation "jakarta.servlet:jakarta.servlet-api:${servletVersion}"
    implementation "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}"
    implementation "gg.jte:jte:${jteVersion}"
    implementation "gg.jte:jte-runtime:${jteVersion}"
}

jte {
    sourceDirectory = file("src/main/jte").toPath()

    contentType = gg.jte.ContentType.Html
    binaryStaticContent = false

    generate()
}

// Настройка JaCoCo
jacoco {
    toolVersion = '0.8.14'  // актуальная версия на 2025 год с поддержкой Java 25
}

// Настройка тестов
test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport  // генерировать отчёт после тестов
}

// Настройка JaCoCo отчёта
jacocoTestReport {
    dependsOn test  // отчёт генерируется после выполнения тестов
    reports {
        xml.required = false
        csv.required = false
        html.required = true
        html.outputLocation = layout.buildDirectory.dir('reports/jacoco/test/html')
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    '**/*Jte*Generated*.class',
                    '**/*_jte*',
                    '**/jte/**',
                    'gg/jte/generated/**'
            ])
        }))
    }
}

// Настройка проверки покрытия (минимум 80%)
jacocoTestCoverageVerification {
    dependsOn jacocoTestReport
    violationRules {
        rule {
            limit {
                minimum = 0.80  // 80% покрытия инструкций
            }
        }
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    '**/*Jte*Generated*.class',
                    '**/*_jte*',
                    '**/jte/**',
                    'gg/jte/generated/**'
            ])
        }))
    }
}

// Интеграция проверок в lifecycle
check {
    dependsOn jacocoTestCoverageVerification
}

test {
    useJUnitPlatform()
}

application {
    mainClass = 'ru.mentee.power.crm.Main'
}